<resources>
    <string name="app_name">RoadTrip</string>
    <string name="username">Username/Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgotPassword">Request for Password</string>
    <string name="register">Register</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="termsAndConditions">I agree to the terms and conditions of RoadTrip.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Have an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Join Now!</string>
    <string name="back_to_login">Remember your password?</string>
    <string name="forgotPasswordtxt">Forgot your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot">Forgot Password</string>
    <string name="logout">Logout</string>
    <string name="accountType">Choose Account Type</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="input_placeholder">Write a message</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string-array name="gender_entries">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="filter_entries">
        <item>Total</item>
        <item>Year</item>
    </string-array>
    <string-array name="filter_size">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="filter_year">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>
    <string-array name="filter_year_size">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="filter_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="filter_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="filter_week">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
    </string-array>
    <string-array name="filter_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="size_entries">
        <item>Car Renter</item>
        <item>Car Owner</item>
    </string-array>
    <string-array name="size_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string-array name="car_color">
        <item>White</item>
        <item>Silver</item>
        <item>Black</item>
        <item>Grey</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Brown</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Violet</item>
        <item>Purple</item>
    </string-array>
    <string-array name="service_type">
        <item>Self-drive</item>
        <item>Chauffeur</item>
    </string-array>
    <string-array name="car_year">
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2019</item>
    </string-array>
    <string-array name="car_brand">
        <item>Toyota</item>
        <item>Mitsubishi</item>
        <item>Hyundai</item>
        <item>Honda</item>
        <item>Ford</item>
        <item>Isuzu</item>
        <item>Nissan</item>
        <item>Suzuki</item>
        <item>Chevrolet</item>
        <item>Mazda</item>
        <item>Kia</item>
        <item>Tata</item>
    </string-array>
    <string-array name="car_brand_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="toyota_models">
        <item>Wigo</item>
        <item>Prius</item>
        <item>Prius C</item>
        <item>Yaris</item>
        <item>Vios</item>
        <item>Altis</item>
        <item>Camry</item>
        <item>Avanza</item>
        <item>Innova</item>
        <item>Rush</item>
        <item>Fortuner</item>
        <item>FJ Cruiser</item>
        <item>Land Cruiser</item>
        <item>Land Cruiser Prado</item>
        <item>Hilux</item>
    </string-array>
    <string-array name="toyota_models_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="mitsubishi_models">
        <item>Mirage</item>
        <item>Mirage G4</item>
        <item>Xpander</item>
        <item>Montero Sport</item>
        <item>Pajero</item>
        <item>Patrol Royale</item>
        <item>Strada</item>
        <item>L200</item>
    </string-array>
    <string-array name="mitsubishu_models_values">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="hyundai_models">
        <item>Eon</item>
        <item>Veloster</item>
        <item>Reina</item>
        <item>Accent</item>
        <item>Elantra</item>
        <item>Palisade</item>
        <item>Tucson</item>
        <item>Santa Fe</item>
    </string-array>
    <string-array name="hyundai_models_values">
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="honda_models">
        <item>Jazz</item>
        <item>Brio</item>
        <item>City</item>
        <item>Accord</item>
        <item>Brio Amaze</item>
        <item>Civic</item>
        <item>Odyssey</item>
        <item>Mobilio</item>
        <item>BRV</item>
        <item>HRV</item>
        <item>CRV</item>
        <item>Pilot</item>
    </string-array>
    <string-array name="honda_models_values">
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
    </string-array>
    <string-array name="ford_models">
        <item>Fiesta-Hatchback</item>
        <item>Focus-Hatchback</item>
        <item>Fiesta-Sedan</item>
        <item>Focus-Sedan</item>
        <item>Ecosport</item>
        <item>Expedition</item>
        <item>Explorer</item>
        <item>Evereset</item>
        <item>Raptor</item>
        <item>Ranger</item>
    </string-array>
    <string-array name="ford_models_values">
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
    </string-array>
    <string-array name="kia_models">
        <item>Picanto</item>
        <item>Rio</item>
        <item>Soluto</item>
        <item>Stinger</item>
        <item>Soul</item>
        <item>Sorento</item>
        <item>Grand Carnival</item>
        <item>Sportage</item>
    </string-array>
    <string-array name="kia_models_values">
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
    </string-array>
    <string-array name="suzuki_models">
        <item>Swift</item>
        <item>Celerio</item>
        <item>Alto</item>
        <item>Dzire</item>
        <item>Ciaz</item>
        <item>APV</item>
        <item>Ertiga</item>
        <item>Jimny</item>
    </string-array>
    <string-array name="suzuki_models_values">
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
    </string-array>
    <string-array name="isuzu_models">
        <item>Crosswind</item>
        <item>MU-X</item>
        <item>D-MAX</item>
    </string-array>
    <string-array name="isuzu_models_values">
        <item>70</item>
        <item>71</item>
        <item>72</item>
    </string-array>
    <string-array name="mazda_models">
        <item>Mazda2-Hatchback</item>
        <item>Mazda3-Hatchback</item>
        <item>Mazda2-Sedan</item>
        <item>Mazda2-Sedan</item>
        <item>Mazda6</item>
        <item>CX-3</item>
        <item>CX-5</item>
        <item>CX-9</item>
        <item>BT-50</item>
    </string-array>
    <string-array name="mazda_models_values">
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
    </string-array>
    <string-array name="chevrolet_models">
        <item>Spark</item>
        <item>Sail</item>
        <item>Cruze</item>
        <item>Malibu</item>
        <item>Trax</item>
        <item>Trailblazer</item>
        <item>Suburban</item>
        <item>Colorado</item>
    </string-array>
</resources>