<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpage_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/roadtrip_logo" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/textbox_username"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        android:padding="19dp" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_button"
        android:layout_margin="5dp"
        android:text="@string/forgotPassword"
        android:textColor="@android:color/white" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/back_to_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_button"
        android:layout_margin="5dp"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />


</LinearLayout>